fix menu on mobile

--- a/src/css/site/mod/_menu.scss
+++ b/src/css/site/mod/_menu.scss
@@ -57,7 +57,6 @@
                 transition: all .25s $cb_rush;
 
                 @include mq (medium, max) {
-                    font-size: 2.3vw;
                     height: 32px;
                     top: 0;
                 }
@@ -111,8 +110,8 @@
     transition: all .2s $cb_rush;
 
     @include mq (medium,max) {
-        width: 220%;
-        left: -220%;
+        width: 230%;
+        left: -230%;
         padding: 0 0 0 18.5vw;
         box-sizing: border-box;
     }
